--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,11 +23,11 @@
             <a class="btn btn-lg btn-dark" href="/version_locator_tag/new">Geospace 및 장비 정보</a>
             <a class="btn btn-lg btn-dark" href="/items">Geospace 및 장비 정보 리스트</a>
         </p>
-        <p class="lead">종합</p>
-        <p>
-            <a class="btn btn-lg btn-info" href="/order">종합 정보</a>
-            <a class="btn btn-lg btn-info" href="/orders">종합 정보2</a>
-        </p>
+<!--        <p class="lead">종합</p>-->
+<!--        <p>-->
+<!--            <a class="btn btn-lg btn-info" href="/order">종합 정보</a>-->
+<!--            <a class="btn btn-lg btn-info" href="/orders">종합 정보2</a>-->
+<!--        </p>-->
     </div>
     <div th:replace="fragments/footer :: footer" />
 </div> <!-- /container -->
